# ocr

./: README.md  down_and_move_the_same.py  img.md  img_enhanced.md  imgs_split.md
cnn_rnn_summary/: cnn_rnn.doc  crnn.doc  伪代码.txt
cvui/: readme.md
emoji/: demo.cpp  readme.md
gesture_exercises/: readme.md
img2x/: binary.cpp  main.py  readme.md
img2x/binary/: binary.cpp  binary.py  readme.md
img2x/enhanced/: readme.md
img2x/match/: readme.md
img2x/merge/: readme.md
img2x/morphology/: readme.md
img2x/rotation/: readme.md
img2x/segment/: readme.md
img2x/unique/: readme.md
img2x/warp/: readme.md
ocr/: 02_paper_answer_recognition  EAI 医疗票据OCR部署说明.docx  readme.md
ocr/adaboost_detect/: readme.md  test_adaboost.cpp
ocr/base64_encode/: CMakeLists.txt  basic.cmake  run.sh
ocr/base64_encode/data/: run.bat  yolov3-voc.cfg.pro  yolov3-voc.cfg.tmp
ocr/base64_encode/data/input/: 00000_1170.jpg.txt  0000_1.jpg.txt  0000_2.jpg.txt
ocr/base64_encode/data/model/a4/: tf.pb  tf.pb.tmp
ocr/base64_encode/data/model/ao/: tf.pb
ocr/base64_encode/data/model/area/: tf.pb
ocr/base64_encode/data/model/gtext/: tf.pb
ocr/base64_encode/data/model/text/: tf.pb
ocr/base64_encode/src/: lc_string_util.cpp  lc_string_util.h  main.cpp
ocr/case1/: readme.md
ocr/case2/: readme.md
ocr/case3/: readme.md
ocr/case4/: readme.md
ocr/digits_classification/: readme.md  test_hogsvm.py
ocr/fasic_cv_sdk/: README.md
ocr/svm/: readme.md
video2x/: README.md  ppt2img.py  ppt_extract.py  run.sh  save_yl_slide.py  v2ppt.py
yuv420p/: nv12.md  readme.md
(+59 files in other folders)
